--- a/recursionSandbox.html
+++ b/recursionSandbox.html
@@ -38,7 +38,7 @@ var getElementsByClassName = function(className) {
 		}
 	}
 
-	traverseChildren(document.body);
+	traverseChildren(document);
 
 	return results;
 };
